# Ant-Automations

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
clients/: README.md
clients/browser-extension/: README.md  background.js  content.js  ingest.js  managed_schema.json  manifest.json  popup.html  popup.js
clients/desktop-agent/: README.md
clients/desktop-agent/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop-agent/src-tauri/src/: events.rs  ingest.rs  main.rs
clients/desktop-agent/ui/: index.html
demo/: WALKTHROUGH.md  reset.sh  seed.py  seed.sql
docs/: api-reference.md  architecture.md
docs/adr/: 001-langgraph-orchestration.md  002-sglang-serving.md  003-nats-event-bus.md  004-qwen3-planner-model.md  005-phi4-vision-model.md  006-tauri-desktop-agent.md  007-chrome-mv3-extension.md  008-hdbscan-pattern-classifier.md  009-observation-data-retention.md
docs/guides/: connector-development.md
docs/security/: architecture-brief.md  betriebsvereinbarung-template.md  data-flow-diagram.md  data-retention-policy.md  dpia-observation-layer.md  employee-privacy-notice.md  instemmingsverzoek-template.md
gtm/outreach/: design-partner-pitch-deck.md  email-linkedin-sequences.md  one-pager-itsm-teams.md  pilot-proposal-template.md  roi-calculator.md
infrastructure/k8s/base/: connectors.yaml  control-plane.yaml  kustomization.yaml  namespace.yaml  planner.yaml  vision.yaml  workers.yaml
infrastructure/monitoring/grafana/dashboards/: platform-overview.json
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/monitoring/otel/: collector.yaml
infrastructure/monitoring/prometheus/: prometheus.yml
libs/observability/: pyproject.toml
libs/observability/src/: __init__.py  errors.py  logging.py  metrics.py  telemetry.py
services/connectors/: Dockerfile  pyproject.toml
services/connectors/src/: main.py
services/connectors/src/connectors/entra_id/: connector.py
services/connectors/src/connectors/servicenow/: connector.py
services/connectors/src/framework/: base.py  registry.py
services/connectors/tests/: conftest.py  test_entra_id.py
services/control-plane/: Dockerfile  alembic.ini  pyproject.toml
services/control-plane/migrations/: env.py
services/control-plane/migrations/versions/: 001_initial_schema.py  002_observation_schema.py
services/control-plane/src/: main.py
services/control-plane/src/db/: __init__.py  pool.py
services/control-plane/src/middleware/: __init__.py  rate_limit.py  tenant.py
services/control-plane/src/rbac/: middleware.py
services/control-plane/src/routers/: admin.py  approvals.py
services/control-plane/src/safety/: approvals.py  audit.py  policy.py
services/control-plane/src/tenants/: service.py
services/control-plane/tests/: conftest.py  test_safety.py
services/observation-ingest/: Dockerfile  README.md  pyproject.toml
services/observation-ingest/src/: main.py  privacy.py
services/observation-ingest/tests/: test_privacy.py
services/pattern-classifier/: Dockerfile  README.md  pyproject.toml
services/pattern-classifier/src/: classifier.py  constraints.py  main.py
services/pattern-classifier/tests/: test_aggregation_gate.py
services/planner/: Dockerfile  pyproject.toml
services/planner/src/: main.py
services/planner/src/graph/: engine.py
services/planner/src/workflows/: access_provisioning.py  ticket_triage.py
services/planner/tests/: test_access_provisioning.py
services/vision/: Dockerfile  pyproject.toml
services/vision/src/: main.py
services/vision/tests/: test_vision_api.py
services/workers/: Dockerfile  pyproject.toml
services/workers/src/: main.py
services/workers/tests/: conftest.py  test_workers_api.py
