[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "ant-pattern-classifier"
version = "0.1.0"
description = "Learn layer — sequence mining + HDBSCAN clustering over normalised observation events."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "nats-py>=2.9",
    "pydantic>=2.5",
    "numpy>=1.26",
    "hdbscan>=0.8.33",
    "scikit-learn>=1.4",
    "asyncpg>=0.29",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]
