[package]
name = "ant-desktop-agent"
version = "0.1.0"
edition = "2021"
description = "Ant Automations Watch-layer desktop agent (Tauri). Emits application-interaction events to observation-ingest."
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
